add test #32